Updated Swagger UI. There was a problem with the documentation not showing up with latest swagger spec. Need an update to fix that problem.

--- a/public/swagger/css/screen.css
+++ b/public/swagger/css/screen.css
@@ -552,7 +552,7 @@
 }
 .swagger-section .swagger-ui-wrap ul#resources {
   font-family: "Droid Sans", sans-serif;
-  font-size: 0.6em;
+  font-size: 0.9em;
 }
 .swagger-section .swagger-ui-wrap ul#resources li.resource {
   border-bottom: 1px solid #dddddd;
